--- a/style.css
+++ b/style.css
@@ -1,118 +1,33 @@
-:focus {
-    outline: none;
-}
-.sprite {
-    background-image: url("img/sprite.png");
-    background-color: transparent;
-    background-repeat: no-repeat;
-}
-.gsprite{
-    background-image: url("img/gsprite.png");
-    background-color: transparent;
-    background-repeat: no-repeat;
-}
-body{
-    height: 100vh;
+html, body{
+    height: 100%;
     margin: 0;
+    padding: 0;
     font-family: Ubuntu, Helvetica, sans-serif;
     font-size: medium;
+    box-sizing: border-box;
 }
 header{
-    top: 0;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    position: fixed;
-    z-index: 1;
+    overflow: hidden;
+    padding: 20px;
 }
-nav{
-    width: 100%;
-    height: 50px;
-    display: flex;
-    align-items: center;
+.header-left{
+    float: left;
 }
-nav div{
-    display: flex;
-    width: 50%;
-    padding: 10px;
-    align-items: center;
+.header-right{
+    float: right;
 }
-nav div:nth-child(1){
-    justify-content: start;
-}
-nav div:nth-child(2){
-    justify-content: flex-end;
-    text-align: right;
-    right: 0;
-}
-nav div a{
-    padding: 15px;
-    white-space: nowrap;
+header div a{
+    color: #000;
     text-decoration: none;
-    color: #3b3b3b;
+    margin: 10px;
 }
-a:hover{
-    text-decoration: underline;
-}
-#login{
-    background: url("img/profile.jpg");
-    height: 10px;
-    width: 10px;
-    background-size: cover;
-    border-radius: 50%;
-    background-position: -1px;
-    cursor: pointer;
-}
-.popup{
-    position: absolute;
-    top: 60px;
-    right: 20px;
-    width: 220px;
-    height: 330px;
-    background-color: #fff;
-    border: 1px solid #c0c0c0;
-    flex-wrap: wrap;
-    align-content: space-around;
-    justify-content: flex-start;
-    box-shadow: 1px -1px 5px silver;
-    z-index: 99;
-    border-radius: 5px;
-}
-.popup a{
-    text-decoration: none;
-    color: #3b3b3b;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 90px;
-    height: 90px;
+header div button{
+    background: #4484f1;
     padding: 10px;
-}
-.popup a:hover{
-    background-color: #e8f0fe;
-}
-.popup a div:nth-of-type(1){
-    height: 48px;
-    width: 48px;
-}
-.first{
-    background-position: -10px -57px;
-}
-.second{
-    background-position: -10px -118px;
-}
-.third{
-    background-position: -10px -3px;
-}
-.fourth{
-    background-position: -10px -178px;
-}
-.fifth{
-    background-position: -10px -235px;
-}
-.icon_text{
-    padding-top: 5px;
+    color: #fff;
+    font-weight: bold;
+    border-radius: 15%;
+    margin-left: 10px;
 }
 main{
     display: flex;
@@ -120,89 +35,34 @@ main{
     align-items: center;
     justify-content: center;
     position: relative;
-    padding-top: 300px;
+    padding-top: 185px;
+    margin: 20px;
 }
-main img{
-    display: block;
-    margin: 0 auto;
+main div a{
+    text-decoration: none;
+    color:#131da3;
 }
-.row{
+.google-logo{
     display: flex;
     flex-direction: row;
+    margin: 0 auto;
 }
-.menu{
-    background-position: -131px -37px;
-    padding: 0;
-    height: 32px;
-    width: 32px;
+.darkmode{
+    background-image: url("img/darkmode.svg");
+    background-color: transparent;
+    background-repeat: no-repeat;
 }
-.menu:hover{
-    background-color: #eee;
-    border-radius: 50%;
-}
-.search_icon{
+.search-icon{
     position: absolute;
     padding: 11px 11px;
     filter: contrast(0);
     background-position: -248px -35px;
     margin: 30px 30px;
 }
-.switch{
-    height: 25px;
-    width: 25px;
-    cursor: pointer;
-}
-.switch:hover{
-    background-color: #eee;
-    border-radius: 50%;
-}
-.dark-icon{
-    background-image: url("img/darkmode.svg");
+.gsprite{
+    background-image: url("img/gsprite.png");
     background-color: transparent;
     background-repeat: no-repeat;
-}
-.dark-mode{
-    background-color: #35363A;
-    color: #fff;
-}
-.dark-mode nav div a{
-    color: #fff;
-}
-.dark-mode .popup{
-    background-color: #35363A;
-    box-shadow: 0 -1px 2px 0 rgba(0, 0, 0, 0.3), 0 -2px 6px 2px rgba(0, 0, 0, 0.15);
-    border: 1px solid #000;
-}
-.dark-mode .popup a .icon_text{
-    filter: invert();
-}
-.dark-mode .buttons div{
-    color: #fff;
-    background-color: #2c2d31;
-}
-.dark-mode footer{
-    background-color: #2c2d31;
-}
-.dark-mode .switch, .dark-mode .menu, .dark-mode .search_icon{
-    filter: invert();
-}
-.dark-mode #search{
-    background-color: #393a3f;
-    color: #fff;
-}
-#search{
-    width: 50vw;
-    max-width: 500px;
-    height: 40px;
-    border: 1px solid #e1e1e1;
-    border-radius: 50px;
-    padding: 0 40px;
-    font-size: initial;
-    margin: 20px;
-}
-#search:hover, #search:active, #search:focus{
-    box-shadow: 0px 1.7px 5px #dfdfdf;;
-    outline: none;
 }
 .buttons{
     display: flex;
@@ -226,13 +86,72 @@ main img{
 .buttons a:hover{
     text-decoration: none;
 }
+#search{
+    width: 50vw;
+    max-width: 500px;
+    height: 40px;
+    border: 1px solid #e1e1e1;
+    border-radius: 50px;
+    padding: 0 40px;
+    font-size: initial;
+    margin: 20px;
+}
+#search:hover, #search:active, #search:focus{
+    box-shadow: 0px 2px 5px #dfdfdf;;
+    outline: none;
+}
+.COVID-link{
+    font-size: small;
+}
+a:hover{
+    text-decoration: underline;
+}
 footer {
-    bottom: 0;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    position: fixed;
-    z-index: 1;
     background-color: #f1f1f1;
-    padding: 10px;
+    width: 100vw;
+    padding: 20px;
+    bottom: 0;
+    position: fixed;
+}
+.footer-left{
+    float: left;
+}
+.footer-right{
+    float: right;
+}
+footer div a{
+    color: #000;
+    text-decoration: none;
+    margin: 10px;
+    padding: 30px 30px 30px 0px;
+}
+.switch{
+    height: 25px;
+    width: 25px;
+    cursor: pointer;
+}
+.switch:hover{
+    background-color: #eee;
+    border-radius: 50%;
+}
+.dark-mode{
+    background-color: #35363A;
+    color: #fff;
+}
+.dark-mode div a{
+    color: #fff;
+}
+.dark-mode .buttons div{
+    color: #fff;
+    background-color: #2c2d31;
+}
+.dark-mode footer{
+    background-color: #2c2d31;
+}
+.dark-mode .switch, .dark-mode .menu, .dark-mode .search-icon{
+    filter: invert();
+}
+.dark-mode #search{
+    background-color: #393a3f;
+    color: #fff;
 }
